Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Beta, 5.4.0
-
OS X 10.9 & 10.10
Description
While not using renderType: Text.NativeRendering results in fuzzily rendered texts both with QQuickView and QQuickWidget, using native rendering with QQuickWidget results in tremendously ugly text. Also colors are much too dark. See attached screenshots and project
Attachments
Issue Links
- is required for
-
QTCREATORBUG-13440 Welcome screen acts like a separate window to an extent
- Closed
- relates to
-
QTBUG-44063 Fuzzy text on OS X with QGraphicsView and QOpenGLWidget viewport
- Closed
For Gerrit Dashboard: QTBUG-42861 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
102300,2 | OS X: Welcome/QQuickWidget fixes | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
104018,3 | Avoid sRGB usage when targeting an incapable FBO | 5.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
110538,3 | Support sRGB for text with QQuickWidget | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |