OS X: Welcome/QQuickWidget fixes

The rendered text is still ugly, but the fuzzy text is better than the
alternative currently.

Change-Id: Id9e54fb406ee964e0b9b5c40b7a8108b45c15f85
Task-number: QTBUG-42861
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>